Minor refactoring
Configure grafana datasource as endpoint